--- a/app/views/permisos/show.html.erb
+++ b/app/views/permisos/show.html.erb
@@ -12,5 +12,5 @@
 
 
 <div data-role="footer">
-<!--   <%= link_to 'Editar', edit_perfil_permiso_path(@perfil_permiso), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>  -->
+  <!-- %= link_to 'Editar', edit_perfil_permiso_path(@perfil_permiso), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" % -->
 </div>
