--- a/app/views/alumnos/_form.html.erb
+++ b/app/views/alumnos/_form.html.erb
@@ -29,15 +29,15 @@
     </div>
     <div class="field">
         <%= f.label :dni %><br />
-        <%= f.text_field :dni ,"style" => "width:150px", :placeholder => "99999999", :pattern => "\d{8}" %>
+        <%= f.text_field :dni ,"style" => "width:150px", :placeholder => "99999999", :pattern => "\\d{8}" %>
     </div>
     <div class="field">
         <%= f.label :telefono_fijo %><br />
-        <%= f.telephone_field :telefono_fijo, "style" => "width:150px", :placeholder => "444-4444", :pattern => "\d{3}[\-]*\d{4}" %>
+        <%= f.telephone_field :telefono_fijo, "style" => "width:150px", :placeholder => "444-4444", :pattern => "\\d{3}[\\-]*\\d{4}" %>
     </div>
     <div class="field">
         <%= f.label :telefono_movil %><br />
-        <%= f.telephone_field :telefono_movil, "style" => "width:150px", :placeholder => "999999999", :pattern => "\d{9}" %>
+        <%= f.telephone_field :telefono_movil, "style" => "width:150px", :placeholder => "999999999", :pattern => "9\\d{8}" %>
     </div>
     <div class="field">
         <%= f.label :direccion %><br />
@@ -45,11 +45,13 @@
     </div>
     <div class="field">
         <%= f.label :correo %><br />
-        <%= f.email_field :correo, :placeholder => "dirceu@example.com" %>
+        <%= f.email_field :correo, :placeholder => "nombre@dominio.com" %>
     </div>
     <div class="field">
         <%= f.label :foto %><br />
-        <%= f.file_field :foto %>
+        <%= f.file_field :foto, :onchange => "PreviewImage(this);" %><br />
+        <%= image_tag("blank.gif", :id => "preview") %>
+
     </div>
     <div class="field">
         <%= f.hidden_field :usuario, :value => current_user.usuario %>
