--- a/app/views/cursos/_form.html.erb
+++ b/app/views/cursos/_form.html.erb
@@ -13,11 +13,11 @@
 
 <div data-role="fieldcontain">
   <div class="field">
-    <%= f.label :descripcion %><br />
+    Descripción (*)<br />
     <%= f.text_field :descripcion %>
   </div>
   <div class="field">
-    <%= f.label :abreviatura %><br />
+    Abreviatura (*)<br />
     <%= f.text_field :abreviatura %>
   </div>
   <div class="field">
