--- a/app/views/actividades/_form.html.erb
+++ b/app/views/actividades/_form.html.erb
@@ -26,27 +26,28 @@
     </div>
     <div class="field">
         <!--%= f.label :tipo_evento_id %><br /-->
-        Tipo Evento<br /><%= collection_select(:actividad, :tipo_evento_id, TipoEvento.where("cuaderno_control = 0"), :id, :descripcion, { :prompt => ':: Seleccione ::'}, {"data-mini" => "true"}) %>
+        Tipo de evento (*)<br />
+        <%= collection_select(:actividad, :tipo_evento_id, TipoEvento.where("cuaderno_control = 0"), :id, :descripcion, { :prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
     </div>
     <div class="field">
-        <%= f.label :tipo_actividad, "for" => "name" %><br />
-        <%= collection_select(:actividad, :tipo_actividad, ListaValor.where("tabla=6"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true"}) %>
+        Tipo de actividad (*)<br />
+        <%= collection_select(:actividad, :tipo_actividad, ListaValor.where("tabla=6"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
     </div>
     <div class="field">
-        <%= f.label :nombre, "for" => "name" %><br />
-        <%= f.text_field :nombre, "data-mini" => "true" %>
+        Nombre (*)<br />
+        <%= f.text_field :nombre, :required => "required", "data-mini" => "true" %>
     </div>
     <div class="field">
-        <%= f.label :detalle, "for" => "Textarea" %><br />
-        <%= f.text_area :detalle, "data-mini" => "true" %>
+        Detalle (*)<br />
+        <%= f.text_area :detalle, :required => "required", "data-mini" => "true" %>
     </div>
     <div class="field">
-        <%= f.label :fecha_hora_inicio, "for" => "name" %><br /> 
+        Fecha y hora de inicio (*)<br /> 
         <input name = "actividad[fecha_hora_inicio]" data-mini="true" data-role="datebox" type = "datetime-local" id="actividad_fecha_hora_inicio" value = "<%="#{valor_fhi}"%>"  required = "required">        
     </div>
 
     <div class="field">
-        <%= f.label :fecha_hora_fin, "for" => "name" %><br />
+        Fecha y hora de fin (*)<br />
         <input name = "actividad[fecha_hora_fin]" data-mini="true" data-role="datebox" type = "datetime-local" id="actividad_fecha_hora_fin" value = "<%="#{valor_fhf}"%>"  required = "required">        
     </div>
     
@@ -56,20 +57,20 @@
         <%= f.label :requiere_autorizacion %>
     </div>
     <div class="field">
-        Ultimo dia para autorizacion<br />
+        Ultimo dia para autorización<br />
         <%= f.text_field :limite_autorizacion, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px" %>
     </div>
     <!--/fieldset-->
     <div class="field">
-        <%= f.label :inicio_notificacion, "for" => "name" %><br />
+        Inicio de notificación<br />
         <%= f.text_field :inicio_notificacion, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px" %>
     </div>
     <div class="field">
-        <%= f.label :fin_notificacion, "for" => "name" %><br />
+        Fin de notificación<br />
         <%= f.text_field :fin_notificacion, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px" %>
     </div>
     <div class="field">
-        Frecuencia de notificacion<br />
+        Frecuencia de notificación <br />
         Cada <%= f.number_field :frecuencia_dias_notificacion, "type" => "number", "min" => "1", "max" => "30", "data-mini" => "true", "style" => "width:50px"  %> dia(s)
     </div>
 
