--- a/app/views/perfiles/_form.html.erb
+++ b/app/views/perfiles/_form.html.erb
@@ -13,8 +13,8 @@
 
 <div data-role="fieldcontain">
   <div class="field">
-    <%= f.label :descripcion %><br />
-    <%= f.text_field :descripcion %>
+    <%= "Descripcion (*)" %><br />
+    <%= f.text_field :descripcion, :required => "required", :pattern => "^[a-zA-ZñÑ]*$", :title => "No están permitidos números" %>
   </div>
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
