--- a/app/views/permisos/_form.html.erb
+++ b/app/views/permisos/_form.html.erb
@@ -13,12 +13,12 @@
 
 <div data-role="fieldcontain">
   <div class="field">
-    Clase de sujeto: <br/>
-    <%= f.text_field :subject_class %>
+    Clase de sujeto (*)<br/>
+    <%= f.text_field :subject_class, :required => "required", :pattern => "^[a-zA-ZñÑ]*$", :title => "No están permitidos números" %>
   </div>
   <div class="field">
-    Acción: <br/>
-    <%= f.text_field :action %>
+    Acción (*)<br/>
+    <%= f.text_field :action, :required => "required", :pattern => "^[a-zA-ZñÑ]*$", :title => "No están permitidos números" %>
   </div>
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
