Validacion de fecha de evento, correccion campo obligatorio cc evento

--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -24,7 +24,7 @@
 <br/>
             <div style="text-align: left;">
               N° documento:<br/>
-              <%= text_field_tag(:numero_documento, numero, "data-mini" => "true", :pattern => "\\d{8}"), :title => "Ingrese 8 dígitos" %>
+              <%= text_field_tag(:numero_documento, numero, "data-mini" => "true", :pattern => "\\d{8}", :title => "Ingrese 8 dígitos") %>
             </div>
 <br/>
             <div>
