--- a/app/views/perfiles/_form.html.erb
+++ b/app/views/perfiles/_form.html.erb
@@ -14,7 +14,7 @@
 <div data-role="fieldcontain">
   <div class="field">
     <%= "Descripcion (*)" %><br />
-    <%= f.text_field :descripcion, :required => "required", :pattern => "^[a-zA-ZñÑ]*$", :title => "No están permitidos números" %>
+    <%= f.text_field :descripcion, :required => "required", :pattern => "^[a-zA-ZñÑ ]*$", :title => "Solo estan permitidos letras" %>
   </div>
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
