--- a/app/views/actividades/_form.html.erb
+++ b/app/views/actividades/_form.html.erb
@@ -43,12 +43,12 @@
     </div>
     <div class="field">
         Fecha y hora de inicio (*)<br /> 
-        <input name = "actividad[fecha_hora_inicio]" data-mini="true" data-role="datebox" type = "datetime-local" id="actividad_fecha_hora_inicio" value = "<%="#{valor_fhi}"%>"  required = "required">        
+        <%= f.text_field :fecha_hora_inicio, "data-mini" => "true", "data-role" => "datebox", "type" => "datetime-local", :required => "required", :value => "#{valor_fhi}" %>
     </div>
 
     <div class="field">
         Fecha y hora de fin (*)<br />
-        <input name = "actividad[fecha_hora_fin]" data-mini="true" data-role="datebox" type = "datetime-local" id="actividad_fecha_hora_fin" value = "<%="#{valor_fhf}"%>"  required = "required">        
+        <%= f.text_field :fecha_hora_fin, "data-mini" => "true", "data-role" => "datebox", "type" => "datetime-local", :required => "required", :value => "#{valor_fhf}" %>
     </div>
     
     <!--fieldset data-role="controlgroup"-->
